<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ESSMobileActivity!</string>
    <string name="app_name">沃运维</string>
    <string name="ok">是</string>
    <string name="cancel">否</string>
    <string name="share_dialog_title">测试</string>
    <string name="send">发送</string>
    <string name="close">关闭</string>
    <string name="tab_home">首页</string>
    <string name="tab_app">应用</string>
    <string name="tab_msg">消息</string>
    <string name="app_more">更多</string>
    <string name="app_tab_title">应用列表</string>
    <string name="delete">删除</string>
    <string name="not_install">未安装</string>
    <string name="retry">继续</string>
    <string name="login">登 录</string>
    <string name="str_pwd">密码</string>
    <string name="str_pwd_input">请输入密码</string>
    <string name="asset_info_title">简介</string>
    <string name="downloading">下载中</string>
    <string name="loading">加载中...</string>
    <string name="launch">打开</string>
    <string name="uninstall">卸载</string>
    <string name="download">下载</string>
    <string name="install">安装</string>
    <string name="update">更新</string>
    <string name="updated">有更新</string>
    <string name="select">选中</string>
    <string name="unselect">不选</string>
    <string name="my_review">评论</string>
    <string name="my_comment">我的评论</string>
    <string name="canceldownload">取消下载</string>
    <string name="MENU_FEEDBACK">反馈</string>
    <string name="pausedownload">取消下载</string>
    <string name="app_not_found_dlg_title">找不到应用</string>
    <string name="app_not_found_dlg_text">无法在安装列表中找到该应用</string>
    <string name="uninstall_application_text">该软件即将被卸载</string>
    <string name="uninstall_update_text">该软件的更新版本即将被卸载，用户仍可使用系统内置的旧版本</string>
    <string name="uninstalling">卸载中…</string>
    <string name="uninstall_done">卸载成功！</string>
    <string name="uninstall_failed">无法卸载</string>
    <string name="uninstall_failed_msg">%1$s 卸载失败！</string>
    <string name="install_done">安装成功！</string>
    <string name="install_failed">无法安装</string>
    <string name="installing">安装中...</string>
    <string name="rating_label">请评分</string>
    <string name="btn_add_comment">添加评论</string>
    <string name="btn_remove_comment">删除评论</string>
    <string name="label_comment_safa">还没有人对这款软件评论，快抢</string>
    <string name="not_installed">抱歉，您还没有安装此应用，不能发表评论。</string>
    <string name="toast_error_content_empty">请填写错误描述</string>
    <string name="reply_comment_hint">在此添加回复</string>
    <string name="empty">没有找到匹配内容</string>
    <string name="report_error">报告错误</string>
    <string name="feedback">反馈</string>
    <string name="description">软件描述</string>
    <string name="no_screen_shorts">没有截屏</string>
    <string name="btn_reply">回复</string>
    <string name="comment_hint">请在此添加评论</string>
    <string name="no_screen_shot">暂时没有截图信息</string>
    <string name="menu_return">取消</string>
    <string name="menu_quit_title">退出</string>
    <string name="str_code">账号</string>
    <string name="str_inputcode">输入账号</string>
    <string name="prompt_exception_net">网络异常，获取数据失败！</string>
    <string name="login_label_username">帐号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登   录</string>
    <string name="login_status_logging_in">登录中...</string>
    <string name="login_username_hint">工号或手机号</string>
	<string name="opt_remember">记住密码</string>
	<string name="settings">Settings</string>
	<string name="login_label_unregi">解绑</string>
</resources>