<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <RelativeLayout
        android:id="@+id/asset_info_gallery_ds"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:id="@id/info_buttons_bar"
            android:layout_width="fill_parent"
            android:layout_height="60dip"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:background="@drawable/bottom_bar_bg"
            android:orientation="horizontal"
            android:paddingLeft="4.0dip"
            android:paddingRight="4.0dip"
            android:paddingTop="2.0dip"
            android:visibility="gone" >

            <View
                android:id="@id/buttons_spacer_left"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:visibility="gone" />

            <Button
                android:id="@id/launchbutton"
                style="@style/InfoBarPrimaryButton"
                android:text="@string/launch"
                android:visibility="gone" />

            <Button
                android:id="@id/downloadbutton"
                style="@style/InfoBarPrimaryButton"
                android:text="@string/download"
                android:visibility="gone" />

            <Button
                android:id="@id/updatebutton"
                style="@style/InfoBarPrimaryButton"
                android:text="@string/update"
                android:visibility="gone" />

            <Button
                android:id="@id/selectbutton"
                style="@style/InfoBarPrimaryButton"
                android:text="@string/select"
                android:visibility="gone" />

            <Button
                android:id="@id/installbutton"
                style="@style/InfoBarPrimaryButton"
                android:text="@string/install"
                android:visibility="gone" />

            <Button
                android:id="@id/dummybutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:background="@android:color/transparent"
                android:visibility="gone" />

            <Button
                android:id="@id/uninstallbutton"
                style="@style/InfoBarSecondaryButton"
                android:text="@string/uninstall"
                android:visibility="gone" />

            <Button
                android:id="@id/canceldownloadbutton"
                style="@style/InfoBarSecondaryButton"
                android:onClick="cancel"
                android:text="@string/pausedownload"
                android:visibility="gone" />

            <Button
                android:id="@id/installingbutton"
                style="@style/InfoBarSecondaryButton"
                android:text="@string/installing"
                android:visibility="gone" />

            <Button
                android:id="@id/unselectbutton"
                style="@style/InfoBarSecondaryButton"
                android:text="@string/unselect"
                android:visibility="gone" />

            <Button
                android:id="@id/dummybutton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:background="@android:color/transparent"
                android:visibility="gone" />

            <Button
                android:id="@id/reportErrorbutton"
                style="@style/InfoBarSecondaryButton"
                android:text="@string/report_error"
                android:visibility="gone" />

            <Button
                android:id="@id/feedbackbutton"
                style="@style/InfoBarSecondaryButton"
                android:text="@string/feedback"
                android:visibility="gone" />

            <View
                android:id="@id/buttons_spacer_right"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:visibility="gone" />
        </LinearLayout>

        <ScrollView
            android:id="@id/asset_info_gallery"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_above="@id/info_buttons_bar"
            android:background="@drawable/list_view_bkg"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@id/download_status_container"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/list_view_bkg"
                    android:orientation="vertical"
                    android:visibility="gone" >

                    <TextView
                        android:id="@id/download_indicator"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/header_item_bg"
                        android:gravity="center_vertical"
                        android:paddingBottom="3.0dip"
                        android:paddingLeft="8.0dip"
                        android:text="@string/downloading"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#ff484848" />

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="vertical" >

                        <ProgressBar
                            android:id="@id/download_progress_bar"
                            style="@style/DownloadProgressBar"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:max="100"
                            android:paddingLeft="8.0dip"
                            android:paddingRight="8.0dip"
                            android:paddingTop="15.0dip" />

                        <TextView
                            android:id="@id/download_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10.0dip"
                            android:paddingLeft="8.0dip"
                            android:paddingTop="3.0dip"
                            android:text="@string/downloading"
                            android:textAppearance="?android:textAppearanceSmall"
                            android:textColor="#ff484848" />
                    </LinearLayout>
                </LinearLayout>

                <include
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/asset_info_detail" />

                <include
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    layout="@layout/asset_info_screenshort" />

                <TextView
                    android:id="@id/promotion"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:paddingBottom="2.0dip"
                    android:paddingRight="5.0dip"
                    android:textColor="#ff484848"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/header_item_bg"
                    android:gravity="center_vertical"
                    android:paddingBottom="3.0dip"
                    android:paddingLeft="8.0dip"
                    android:text="@string/description"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="#ff484848" />

                <TextView
                    android:id="@id/description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:lineSpacingMultiplier="1.3"
                    android:maxLines="4"
                    android:paddingLeft="8.0dip"
                    android:paddingTop="10.0dip"
                    android:text="@string/description"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="#ff484848" />

                <ImageButton
                    android:id="@id/detail_more"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:paddingBottom="8.0dip"
                    android:scaleType="fitXY"
                    android:src="@drawable/detail_more_bg" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <include
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        layout="@layout/fullscreen_loading_indicator"
        android:visibility="visible" />

</merge>