<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/news_background"
    android:orientation="vertical" >

    <ScrollView
        android:id="@id/comment_main"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/comment_title"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            android:gravity="top"
            android:orientation="vertical"
            android:paddingLeft="5.0dip"
            android:paddingRight="5.0dip"
            android:paddingTop="20.0dip"
            android:scrollbars="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10.0dip"
                android:background="@drawable/panel"
                android:orientation="vertical"
                android:padding="0.0dip" >

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/comment_item_bg"
                    android:baselineAligned="true"
                    android:paddingLeft="5.0dip"
                    android:paddingRight="2.0dip" >

                    <TextView
                        android:id="@id/author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/author"
                        android:paddingLeft="2.0dip"
                        android:singleLine="true"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:textColor="@color/hint_foreground_light" />
                </RelativeLayout>

                <TextView
                    android:id="@id/comment_body"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:paddingBottom="15.0dip"
                    android:paddingLeft="3.0dip"
                    android:paddingRight="3.0dip"
                    android:paddingTop="10.0dip"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:textColor="@android:color/black" />
            </LinearLayout>

            <EditText
                android:id="@id/comment_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/panel2"
                android:gravity="top"
                android:hint="@string/reply_comment_hint"
                android:lines="10"
                android:paddingTop="22.0dip"
                android:scrollbars="vertical" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@id/ok_panel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@drawable/header"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="4.0dip"
        android:paddingRight="4.0dip"
        android:paddingTop="2.0dip" >

        <Button
            android:id="@id/ok_button"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20.0dip"
            android:layout_weight="2.0"
            android:background="@drawable/toolbar_button_left"
            android:paddingBottom="10.0dip"
            android:text="@string/ok"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />

        <Button
            android:id="@id/dummybutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@android:color/transparent" />

        <Button
            android:id="@id/cancel_button"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginRight="20.0dip"
            android:layout_weight="2.0"
            android:background="@drawable/toolbar_button_right"
            android:paddingBottom="10.0dip"
            android:text="@string/cancel"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@android:color/black" />
    </LinearLayout>

    <include
        android:id="@id/comment_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        layout="@layout/asset_info_header" />

</RelativeLayout>